--- a/tmux.conf
+++ b/tmux.conf
@@ -1,22 +1,14 @@
+# Set true color
+
+set-option -sa terminal-overrides ",xterm*:Tc"
+
 # List of plugins
 
 set -g @plugin 'tmux-plugins/tpm'
-
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
-
-
-# Other examples:
-
-# set -g @plugin 'github_username/plugin_name'
-
-# set -g @plugin 'github_username/plugin_name#branch'
-
-# set -g @plugin 'git@github.com:user/plugin'
-
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
-
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 
