feat: enable vim commands for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,10 @@
 # Set true color
-
 set-option -sa terminal-overrides ",xterm*:Tc"
 
-# List of plugins
+#set vi-mode
+set-window-option -g mode-keys vi
 
+# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
@@ -11,5 +12,5 @@ set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-
 run '~/.tmux/plugins/tpm/tpm'
+
