--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,16 @@
 # Set true color
 set-option -sa terminal-overrides ",xterm*:Tc"
 
+# Enable full mouse support
+set -g mouse on
+
 #set vi-mode
 set-window-option -g mode-keys vi
+
+#keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -10,6 +18,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
